<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoConflict</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordconfirm">Repeat password</string>
    <string name="email">Email</string>
    <string name="tx_crearpartida">Crear Partida</string>
    <string name="partidasdisponibles">Partidas Disponibles</string>
    <string name="partida">Partida</string>
    <string name="waitMsg">Tiempo que durara la partida</string>
    <string name="tx_one"></string>
    <string name="tx_two"></string>
    <string name="tx_three"></string>
    <string name="tx_four"></string>
    <string name="logo">logo</string>
    <string name="nombremapa">Nombre del Mapa</string>
    <string name="cargarmapa">Cargar mapa</string> 

</resources>
