<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background5"
    android:orientation="vertical"
    tools:context=".CrearPartidaScreen_activity" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="25dp"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="18dp"
            android:background="@drawable/back_custom"
            android:onClick="onClick_back" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/partida"
            android:textColor="@color/opaque_red"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/font_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout1" >

        <ImageView
            android:id="@+id/small_layer_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="28dp"
            android:src="@drawable/medium_layer_black"
            android:text="@string/tx_one"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tx_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout2"
        android:layout_alignParentLeft="true" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout3" >

        <ImageView
            android:id="@+id/small_layer_black2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/small_layer_black1"
            android:layout_marginRight="27dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/small_layer_black" />

        <ImageView
            android:id="@+id/small_layer_black1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/small_layer_black2"
            android:layout_below="@+id/small_layer_black4"
            android:layout_marginTop="10dp"
            android:src="@drawable/small_layer_black" />

        <ImageView
            android:id="@+id/small_layer_black4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/small_layer_black1"
            android:layout_marginTop="10dp"
            android:src="@drawable/small_layer_black" />

        <TextView
            android:id="@+id/tx_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/small_layer_black4"
            android:layout_alignLeft="@+id/small_layer_black4"
            android:layout_marginLeft="29dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tx_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/small_layer_black1"
            android:layout_alignLeft="@+id/tx_two"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tx_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/small_layer_black2"
            android:layout_alignLeft="@+id/tx_three"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/iv_waitInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/small_layer_black2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_alignBottom="@+id/clock"
            android:layout_alignRight="@+id/small_layer_black2"
            android:text="@string/waitMsg"
            android:textColor="@color/opaque_red"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/clock"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/small_layer_black2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/tenmin_black" />

    </RelativeLayout>

</RelativeLayout>